@@ -1,0 +1,1 @@
+lib/Perl/Critic/Policy/Bangs/ProhibitUselessTopic.pm
